2008-11-22  Donal K. Fellows  <dkf@users.sf.net>

	TIP #119 IMPLEMENTATION

	* generic/tkCanvText.c:  Added -angle configuration option to canvas
	* generic/tkFont.c:	 text items. This required reengineering the
	* library/prolog.ps:	 whole text rendering engine to be able to
	* macosx/tkMacOSXFont.c: handle an angle! No change to any external
	* unix/tkUnixFont.c:	 API. Note, this feature was originally
	* unix/tkUnixRFont.c:	 approved for Tk 8.5, but it has proved much
	* win/tkWinFont.c:	 harder to implement than originally
	* generic/tkInt.h:	 estimated. [Patch 1611359]
	* tests/canvText.test:

2008-11-22  Pat Thoyts	<patthoyts@users.sourceforge.net>

	* test/winDialog.test: Avoid some locale-dependent failures by using
	* win/tkWinTest.c:     id's or an english constraint. [Bug 2307837]

2008-11-19  Joe English	 <jenglish@users.sourceforge.net>

	* doc/ttk_panedwindow.n: Remove inoperative text stating that slave
	windows must be direct children of the master. [Bug 1824996]

2008-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c	 Minor simplification in fix for [Bug 2312027]
				 no need to malloc and copy photo type name
				 because it is a constant to begin with.
	* generic/tkOldConfig.c	 Convert Tcl_SetResult(......, TCL_DYNAMIC) to
	* mac/tkMacOSXWm.c	 Tcl_SetResult(......, TCL_VOLATILE), in
	* unix/tkUnixWm.c	 preparation for TIP #340
	* unix/tkUnixSend.c
	* win/tkWinWm.c

2008-11-16  Joe English	 <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c: Widget self-destruction is not necessarily
	an error. [Bug 2298720]

2008-11-16  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n: Added note about [wm overrideredirect] so that users will
	avoid making unwarranted assumptions about how magical it is.
	Triggered by [Bug 2282861] discussion.

2008-11-14  Pat Thoyts	<patthoyts@users.sourceforge.net>

	* generic/tk.h:	       The TIP 125 implementation permits the
	* generic/tkFrame.c:   [wm manage] command to manage any widget but