@@ -1,3 +1,10 @@
+2008-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/tkCanvText.c:  Fixed up complaints from MSVC engendered
+	* generic/tkFont.c:      by the last commit. In particular replaced
+	* win/tkWinDraw.c:       round() which is a C99 function.
+	* win/tkWinFont.c:
+
 2008-11-22  Donal K. Fellows  <dkf@users.sf.net>
 
 	TIP #119 IMPLEMENTATION
